--- a/.env.testing
+++ b/.env.testing
@@ -2,7 +2,7 @@ APP_ENV=testing
 APP_KEY=base64:etFxfRGYjX/F/fftXDX/wrFEhcfubGzYdmpJuIinPoU=
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=testing
 DB_USERNAME=sail
