--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,7 +54,9 @@ jobs:
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
       - name: Copy Testing Environment
-        run: cp .env.testing .env
+        run: | 
+          cp .env.testing .env
+          sed -i 's/DB_HOST=mysql/DB_HOST=127.0.0.1/' .env
 
       - name: Generate Application Key
         run: php artisan key:generate
