Add commands for debugging

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -58,6 +58,14 @@ jobs:
           cp .env.testing .env
           sed -i 's/DB_HOST=mysql/DB_HOST=127.0.0.1/' .env
 
+      - name: Wait for MySQL
+        run: |
+          echo "Waiting for MySQL to be ready..."
+          until mysql -h 127.0.0.1 -u sail -ppassword -e "SELECT 1"; do
+            sleep 1
+          done
+          echo "MySQL is ready!"
+
       - name: Generate Application Key
         run: php artisan key:generate
 
@@ -69,6 +77,9 @@ jobs:
 
       - name: Build Assets
         run: npm run build
-
+      
+      - name: Debug .env
+        run: cat .env
+        
       - name: Tests
-        run: ./vendor/bin/phpunit
+        run: ./vendor/bin/phpunit  --verbose
